ajout de l'alerte, favicon, couleur au car où l'image du header n'apparait pas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="shortcut icon" href="./asset/img/icon-removebg-preview.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
@@ -30,7 +31,10 @@
             <p class="menu">menu</p>
         </nav>
     </header>
-    <div class="zoneT"> <p>simulation automobile</p></div>
+    <div class="zoneT"> 
+        <p>simulation automobile</p>
+        <marquee behavior="" direction="" scrolldelay="200">Si vous ne voyez pas d'image c'est qu'elle n'a pas été prise en compte</marquee>
+    </div>
     <section class="headerImg">
        <div class="cadre">
         <h4 class="titre">simulation automobile</h4>
